# Introduction-to-Python

./: .gitignore  .nojekyll  404 2.html  404 5.html  404.html  404.qmd  CNAME  LICENSE  Pipfile  README.md  _brand.yml  _quarto.yml  _quarto_internal_scss_error.scss  about.qmd  faq.qmd  index 2.html  index 3.html  index.html  index.qmd  klu_syllabus.md  literature.qmd  pyproject.toml  python-books.bib  robots.txt  search 3.json  search.json  sitemap 3.xml  sitemap.xml  styles.scss  styles_html.scss  syllabus.qmd
_repo-md/: index.md
assignments/: assignment-1 2.html  assignment-1 3.html  assignment-1 4.html  assignment-1.html  assignment-1.qmd  assignment-2 2.html  assignment-2 3.html  assignment-2 4.html  assignment-2.html  assignment-2.qmd  assignment_01 13.html  assignment_01 3.html  assignment_01.html  assignment_01.qmd  assignment_02 11.html  assignment_02 2.html  assignment_02 9.html  assignment_02.html  assignment_02.qmd  generate-housing-prices.py  hamburg_housing_prices.csv  secret-text.txt
docs/: 404.html  CNAME  about.html  faq.html  index.html  literature.html  mistakes.html  search.json  sitemap.xml  styles.scss  syllabus.html  welcome.html
general/: chat.html  chat.qmd  cheatsheet.html  cheatsheet.qmd  faq 8.html  faq.html  faq.qmd  header.html  literature 11.html  literature 2.html  literature.html  literature.qmd  privacy 2.html  privacy.html  privacy.qmd  syllabus 2.html  syllabus 5.html  syllabus.html  syllabus.qmd  uv 9.html  uv.html  uv.qmd
general 2/: faq.html  literature.html  syllabus 2.html  uv.html
include/: tutorial_end.qmd
(+701 files in other folders)
