[project]
name = "introduction-to-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy",
    "jupyter",
    "pandas",
    "numpy",
    "openpyxl",
    "matplotlib",
    "pygame",
    "dash",
    "nicegui",
    "yfinance",
    "bokeh",
    "streamlit",
    "pyside6",
    "seaborn",
    "networkx",
    "plotly",
    "joypy",
]
